styles/compiled.css
/* ... */
.pkp_structure_body:after, .pkp_structure_main:after {
  clear:both;
  display:block;
  visibility:hidden;
  overflow:hidden;
  height:0 !important;
  line-height:0;
  font-size:xx-large;
  content:" x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x ";
}
.pkp_structure_body {
  *zoom:1;
  border-bottom:1px dotted #999999;
  margin-bottom:3px;
}
.pkp_structure_body .pkp_structure_main {
  *zoom:1;
  padding-top:10px;
  border-top:1px dotted #999999;
  display:table-cell;
  *display:block;
  width:auto;
}
.pkp_structure_sidebar {
  padding-top:10px;
  border-top:1px dotted #999999;
  margin-right:20px;
}
.pkp_structure_sidebar_left {
  float:left;
  width:190px;
  _margin-right:-3px;
}
.pkp_structure_sidebar_right {
  float:right;
  width:190px;
  _margin-left:-3px;
}
.pkp_structure_foot {
  height:315px;
  background-color:#c1bbaf;
  clear:both;
}
.pkp_structure_subfoot {
  border-top:1px dotted #ffffff;
  background-color:#c1bbaf;
}
.pkp_linkActions a.remove_item { background-image:url(../lib/pkp/templates/images/structure/lb_delete.png); }
.pkp_linkActions a.promote { background-image:url(../lib/pkp/templates/images/structure/grid_promote.png); }
.pkp_linkActions a.enable { background-image:url(../lib/pkp/templates/images/structure/grid_promote.png); }
table.pkp_listing td { padding:0.25em 1.5em 0.25em 0.5em; }
table.pkp_listing tr.heading td, table.pkp_listing td.heading {
  font-size:0.85em;
  text-transform:uppercase;
  font-weight:normal;
  padding:0.75em 1.5em 1em 0.5em;
}
table.pkp_listing td.nodata {
  text-align:center;
  font-style:italic;
}
table.pkp_listing td.headseparator {
  border-top:1px dotted #000000;
  font-size:0.1em;
  line-height:1%;
}
table.pkp_listing td.endseparator {
  border-top:1px dotted #000000;
  font-size:0.25em;
  line-height:10%;
}
table.pkp_listing td.separator {
  border-top:1px dotted #ddddd0;
  font-size:0.1em;
  line-height:1%;
}
.pkp_controllers_fontController_smallFont {
  background:url(../lib/pkp/templates/images/icons/font-down.png);
  outline:none;
  text-indent:-9999px;
  display:block;
  float:left;
  width:20px;
  height:23px;
}
.pkp_controllers_fontController_defaultFont {
  background:url(../lib/pkp/templates/images/icons/font-default.png);
  outline:none;
  text-indent:-9999px;
  display:block;
  float:left;
  width:20px;
  height:23px;
}
.pkp_controllers_fontController_largeFont {
  background:url(../lib/pkp/templates/images/icons/font-up.png);
  outline:none;
  text-indent:-9999px;
  display:block;
  float:left;
  width:20px;
  height:23px;
}
.pkp_controllers_fontController_ldisabled, .pkp_controllers_fontController_sdisabled {
  opacity:0.3;
  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
  filter:alpha(opacity=30);
}
.pkp_form .debug div, .pkp_form .debug label { border:1px solid orange; }
.pkp_form fieldset { margin:10px 5px; }
.pkp_form fieldset.border {
  border:1px solid #cccccc;
  padding:5px;
}
.pkp_form fieldset.inline { margin:0px 0px; }
.pkp_form legend {
  font-size:110%;
  padding:10px 0 10px 0;
}
.pkp_form div.section {
  clear:left;
  margin-bottom:10px;
}
.pkp_form label {
  display:block;
  font-weight:bold;
  padding:3px 0 3px 0;
}
.pkp_form label.error { color:#990000; }
.pkp_form span.pkp_form_error {
  color:#990000;
  font-weight:bold;
  font-size:1em;
}
.pkp_form .pkp_form_error_list a { color:#990000; }
.pkp_form span.pkp_form_success {
  color:#009900;
  font-weight:bold;
  font-size:1em;
}
.pkp_form span label.sub_label {
  font-size:80%;
  color:#999999;
  font-weight:normal;
  padding:2px 0 4px 0;
}
.pkp_form input {
  font-size:90%;
  width:99%;
  border:1px solid #cccccc;
  padding:2px;
}
.pkp_form input:focus { outline:none; }
.pkp_form textarea {
  font-size:90%;
  width:99%;
  border:1px solid #cccccc;
  padding:2px;
  height:10em;
}
.pkp_form textarea:focus { outline:none; }
.pkp_form select {
  font-size:90%;
  width:99%;
  border:1px solid #cccccc;
  padding:2px;
}
.pkp_form select:focus { outline:none; }
.pkp_form .short { height:6em; }
.pkp_form .medium { height:12em; }
.pkp_form .tall { height:18em; }
.pkp_form .req {
  font-weight:bold;
  color:#cc0000;
  padding-left:3px;
}
.pkp_form .inline {
  float:left;
  clear:none !important;
  margin-right:2%;
  margin-bottom:0;
}
.pkp_form ul.checkbox_and_radiobutton {
  margin-bottom:0;
  padding-bottom:0;
  padding-left:0;
}
.pkp_form .checkbox_and_radiobutton li {
  padding-right:35px;
  float:left;
  display:inline;
  list-style:none;
}
.pkp_form .checkbox_and_radiobutton input {
  display:block;
  margin:4px 0 0 0;
  padding:0;
  width:13px;
  height:13px;
}
.pkp_form .checkbox_and_radiobutton li label {
  line-height:150%;
  margin:-17px 0 0 20px;
  padding:0 0 5px 0;
  font-weight:normal;
}
.pkp_form ul.checkbox_and_radiobutton:after {
  content:".";
  display:block;
  clear:both;
  visibility:hidden;
  height:0;
  overflow:hidden;
}
.pkp_form .localization_popover_container_focus {
  margin-top:-2px;
  background-color:#eeeeee;
  display:block;
  padding:2px 5px 0px 5px;
  position:relative;
}
.pkp_form .localization_popover {
  background-color:#eeeeee;
  margin-left:-5px;
  padding:10px 5px 5px 5px;
  position:absolute;
  z-index:15000;
  display:none;
}
.pkp_form label.locale {
  font-size:1px;
  text-indent:-9999px;
}
.pkp_form .localizable {
  background-color:#ffffff !important;
  background-repeat:no-repeat;
  background:url(../lib/pkp/templates/images/structure/icon_globe.png) no-repeat;
  background-position:100% 50%;
}
.pkp_form input.spinner {
  background-color:#ffffff !important;
  background-repeat:no-repeat;
  background:url(../lib/pkp/templates/images/throbber.gif) no-repeat;
  background-position:100% 50%;
}
.pkp_form textarea.localizable { background-position:100% 0; }
/* ... */

